--- a/flash-clients/Broadcaster/src/Broadcaster.mxml
+++ b/flash-clients/Broadcaster/src/Broadcaster.mxml
@@ -140,6 +140,30 @@
 				
 				<s:Label width="100%"
 						 styleName="header"
+						 text="Enable Recording of the Stream (for VOD)?"
+						 />
+				<!-- Upstream Buffer -->
+				<s:CheckBox id="recordCheck"
+							width="100%"
+							label="Enable Recording"
+							enabled="false"
+							selected="false"
+							/>
+			</s:VGroup>
+		</s:Group>
+		
+		<s:Group width="100%">
+			<s:Rect width="100%" height="100%">
+				<s:fill>
+					<s:SolidColor color="#e3e3e3" />
+				</s:fill>
+			</s:Rect>
+			<s:VGroup width="100%"
+					  paddingTop="10" paddingLeft="10"
+					  paddingBottom="10" paddingRight="10">
+				
+				<s:Label width="100%"
+						 styleName="header"
 						 text="Buffer upstream buffer before sending?"
 						 />
 				<!-- Upstream Buffer -->
@@ -221,7 +245,6 @@
 	
 	<fx:Script>
 		<![CDATA[
-			import flash.utils.setTimeout;
 			
 			import mx.binding.utils.BindingUtils;
 			import mx.controls.Alert;
@@ -237,9 +260,11 @@
 			private var streamName:String;
 			private var context:String = "live";
 			private var streamHost:String = "localhost";
-			private var streamType:String = "live";
+			private var streamType:String = STREAM_TYPE_LIVE;
 			
-			private static const STREAM_TYPE:Array = ["live", "record"];
+			private static const STREAM_TYPE_LIVE:String = "live";
+			private static const STREAM_TYPE_RECORD:String = "record";
+			private static const STREAM_TYPE:Array = [STREAM_TYPE_LIVE, STREAM_TYPE_RECORD];
 			
 			private var quality:String = RESOLUTION_MID;
 			private var useHigherQuality:Boolean = false;
@@ -282,7 +307,11 @@
 				// Enable input fields as we have basic criteria
 				streamNameField.enabled = true;
 				resolutionGroup.enabled = true;
+				recordCheck.enabled = true;
 				bufferCheck.enabled = true;
+				
+				recordCheck.selected = (streamType == STREAM_TYPE_RECORD);
+				
 				// Default AMF encoding.
 				NetConnection.defaultObjectEncoding = ObjectEncoding.AMF0;
 				
@@ -491,6 +520,10 @@
 						netStream.attachCamera(camera);
 						netStream.addEventListener(NetStatusEvent.NET_STATUS, onStatus, false);
 						
+						if(recordCheck.selected) {
+							this.streamType = STREAM_TYPE_RECORD;
+						}
+						
 						if(quality == RESOLUTION_LOW) {
 							h264settings = setUpLowQualityBroadcast();
 						}
@@ -541,6 +574,7 @@
 				if(bufferCheck.selected) {
 					netStream.bufferTime = 1;
 				}
+				
 				microphone.encodeQuality = 4;
 				return h264settings;
 				
